# golang-build-tools

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
cmd/: BUILD.bazel  root.go
