load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "golang-build-tools_lib",
    srcs = ["main.go"],
    importpath = "github.com/jiwonaid/golang-build-tools",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "golang-build-tools",
    embed = [":golang-build-tools_lib"],
    visibility = ["//visibility:public"],
)
